IngressService/busybox_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: default
spec:
  containers:
  - image: busybox
    name: busybox-container
    command:
      - sleep
      - "3600"
