IngressService/nginx_pod1.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: http_test
  name: nginx-pod-1
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-container-1
    ports:
    - containerPort: 80
      protocol: TCP
