IngressService/nginx_pod2.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: http_test
  name: nginx-pod-2
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-pod-2
    ports:
    - containerPort: 80
      protocol: TCP
